SERVER-77748 movePrimary coordinator does not clear database metadata in case of stepdown

(cherry-picked from commit 9efe3be1ce0f0afe188034a109605d7dc4b69d78)